--- a/main.html
+++ b/main.html
@@ -7,9 +7,28 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>Hyderabad</h1>
+	<br>
+	<p>
+		Hyderabad is known for its historic legacy and cultural diversity. Hyderabad is the most populous city of the state of Telangana, making it the 4th largest city in India. The culture of the city is a combination of mannerisms of its settlers, resulting in language, lifestyle and tradition diversities.
+	</p>
+	<ol type="1">
+		<b>
+			<li>Charminar</li>
+			<li>Golconda</li>
+			<li>Birla Mandir</li>
+			<li>Hussain sagar</li>
+			<li>Salarjung museum</li>
+		</b>
+	</ol>
+
+	<ul>
+		<i>
+			<li>Hyderabad Dum Biryani</li>
+			<li>Haleem</li>
+			<li>Vada Pav</li>
+		</i>
+	</ul>
 
 </body>
 
